fix overflow

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -7,7 +7,7 @@
 
 body {
     box-sizing: border-box;
-    /* overflow: hidden; */
+    overflow: hidden;
     background-color: var(--violet);
     background-image: url(./images/bg-desktop.svg);
 }
